--- a/templates/morning.html
+++ b/templates/morning.html
@@ -95,7 +95,7 @@
                     <!-- COLORFUL FOOTER -->
                     <tfoot class="bg-light fw-bold" style="border-top: 3px solid #ddd;">
                         <tr style="font-size: 1.1rem;">
-                            <td colspan="3" class="text-end text-uppercase text-secondary pe-3" style="letter-spacing: 1px;">Totals:</td>
+                            <td colspan="3" class="text-end text-uppercase text-secondary pe-3" style="letter-spacing: 1px;">Total:</td>
                             <td class="text-center text-info"><span id="totalOpening">0</span></td>
                             <td class="text-center text-primary"><span id="totalGiven">0</span></td>
                             <td class="text-center text-dark"><span id="totalAll">0</span></td>
@@ -179,3 +179,4 @@
 </script>
 <script src="{{ url_for('static', filename='js/morning.js') }}"></script>
 {% endblock %}
+
